--- a/CloudApp/Pages/Bulbasaur.cshtml
+++ b/CloudApp/Pages/Bulbasaur.cshtml
@@ -4,5 +4,7 @@
 }
 
 <div class="text-center">
-    <img src="https://cdn.dribbble.com/users/1505510/screenshots/3396863/browserpreview_tmp.gif"/>
+    <img src="https://c.tenor.com/-UySwvEyDMMAAAAi/bulbasaur-pokemon.gif"/> 
+    <img src="https://c.tenor.com/6GYLcQPTRHgAAAAi/bulbizarre-bulbasaur.gif"/>
+    <img src="https://i.pinimg.com/originals/99/9d/12/999d12f9520e8b12ed426cf0c0493b43.gif"/>
 </div>
