--- a/CloudApp/Pages/Index.cshtml
+++ b/CloudApp/Pages/Index.cshtml
@@ -6,6 +6,6 @@
 
 <div class="text-center">
     <h1 class="display-4">Bulbasaur is the best Pokémon</h1>
-    <p>and the cutest ❤️</p>
+    <p>and the cutest 💚</p>
     <img src="https://thumbs.gfycat.com/AncientDamagedDingo-max-1mb.gif">
 </div>
